# rendercat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/materials/: missing.tga
include/: camera.hpp  common.hpp  cubemap.hpp  material.hpp  mesh.hpp  point_light.hpp  renderer.hpp  scene.hpp  shader_set.hpp  uniform.hpp
include/rendercat/: AABB.hpp  camera.hpp  common.hpp  cubemap.hpp  gl_perfquery.hpp  gl_screenshot.hpp  material.hpp  mesh.hpp  point_light.hpp  renderer.hpp  scene.hpp  shader_set.hpp  texture.hpp  texture2d.hpp  texture_cache.hpp  uniform.hpp
include/rendercat/core/: AABB.hpp  bbox.hpp  camera.hpp  frustum.hpp  point_light.hpp  ray.hpp
include/rendercat/util/: color_temperature.hpp  gl_meta.hpp  gl_perfquery.hpp  gl_screenshot.hpp  unique_handle.hpp
include/shaders/: common.h
rendercat/: CMakeLists.txt  CMakePCH.h  common.hpp  cubemap.cpp  cubemap.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shader_set.cpp  shader_set.hpp  texture.cpp  texture.hpp  texture2d.cpp  texture2d.hpp  texture_cache.cpp  texture_cache.hpp  uniform.cpp  uniform.hpp
rendercat/core/: bbox.cpp  bbox.hpp  camera.cpp  camera.hpp  frustum.cpp  frustum.hpp  point_light.hpp  ray.hpp
rendercat/shaders/: common.h
rendercat/util/: asan_interface.hpp  color_temperature.cpp  color_temperature.hpp  gl_debug.hpp  gl_meta.cpp  gl_meta.hpp  gl_perfquery.cpp  gl_perfquery.hpp  gl_screenshot.cpp  gl_screenshot.hpp  gl_unique_handle.cpp  gl_unique_handle.hpp  turbo_colormap.cpp  turbo_colormap.hpp  unique_file_handle.hpp  unique_handle.hpp
shaders/: CMakeLists.txt  brdf_lut.comp  cubemap.frag  cubemap.vert  cubemap_atmosphere.frag  cubemap_bake.comp  cubemap_diffuse_irradiance.comp  cubemap_from_equirectangular.comp  cubemap_specular_envmap.comp  debug_quad.frag  downscale_bloom_luma.comp  fsr_pass1_easu.comp  fsr_pass2_rcas.comp  fullscreen_quad.vert  fullscreen_triangle.vert  generic.frag  generic.vert  hdr.comp  hdr.frag  point_lamp.frag  shadow_mapping.frag  shadow_mapping.vert  triangle.frag
shaders/include/: constants.glsl  generic_perframe.glsl  material.glsl  minimal_atmosphere.glsl
src/: cubemap.cpp  gl_perfquery.cpp  gl_screenshot.cpp  main.cpp  material.cpp  mesh.cpp  renderer.cpp  scene.cpp  shader_set.cpp  texture.cpp  texture2d.cpp
src/core/: AABB.cpp  bbox.cpp  camera.cpp  frustum.cpp
src/util/: color_temperature.cpp  gl_meta.cpp  gl_perfquery.cpp  gl_screenshot.cpp  gl_unique_handle.cpp
tests/: CMakeLists.txt  bbox_test.cpp  unique_handle.cpp
